# clearinghouse

./: .env.example  .gitignore  .vercelignore  AGENTS.md  BUILD_PLAN.md  DEMO.md  README.md  REFERENCE_IMPLEMENTATION.md  SCRIPT.md  SUBMISSION.md  TODO.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
app/: next.config.ts  package.json  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/app/agent/[addr]/: page.tsx
app/app/agents/: page.tsx
app/app/api/run/: route.ts
app/components/: proof-replay.tsx  team-graph.tsx
app/lib/: config.ts  demo.ts  settlement-ui.test.ts  settlement-ui.ts
enclave/: Cargo.toml  Dockerfile  Makefile  README.md  expose_enclave.sh  run.sh
enclave/src/: attestation.rs  digest.rs  grader.rs  lib.rs  main.rs  nsm.rs  signer.rs
move/clearinghouse/: Move.toml
move/clearinghouse/sources/: attested.move  enclave.move  job.move  predicate.move  reputation.move  settlement.move
move/clearinghouse/tests/: attested_tests.move  job_tests.move  predicate_tests.move  reputation_tests.move  settlement_tests.move
scripts/: attested-demo.ts  demo-mcp.ts  demo.ts  deploy.ts  preflight.test.ts  preflight.ts  register-enclave.ts  sui.ts
